# pip-fund

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: Makefile  api.rst  conf.py  index.rst
pip_fund/: __init__.py  fund.py
