[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

## Project metadata.  The name should be unique on PyPI.  Update
## author information and the version as you iterate.
[project]
name = "pip-fund"
version = "0.1.0"
description = "Enumerate funding links for Python packages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gaurav Sood", email = "gsood07@gmail.com" }
]
maintainers = [
    { name = "Gaurav Sood", email = "gsood07@gmail.com" }
]
keywords = [
    "funding",
    "sponsorship", 
    "open-source",
    "packaging",
    "pypi",
    "donations",
    "npm-fund"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/gojiplus/pip-fund"
Repository = "https://github.com/gojiplus/pip-fund.git"
Documentation = "https://github.com/gojiplus/pip-fund#readme"
"Bug Tracker" = "https://github.com/gojiplus/pip-fund/issues"
Funding = "https://github.com/sponsors/soodoku"

## Define a console script so that `pip install pip-fund` creates a
## `pip-fund` command.  The value points to the `main` function in
## `pip_fund/fund.py`.
[project.scripts]
pip-fund = "pip_fund.fund:main"

## Optional dependencies.  Installing with `pip install pip-fund[github]`
## will pull in PyGithub and PyYAML, enabling GitHub sponsor
## integration.
[project.optional-dependencies]
github = [
    "PyGithub>=1.59",
    "PyYAML>=6.0"
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "pre-commit>=3.0"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["pip_fund"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "docs"
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["pip_fund"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=pip_fund --cov-report=html --cov-report=term-missing"